src/objects/Ewarehouse_Sale_Green_Grams_Association__c.object
<CustomObject>
    <fields>
        <fullName>Bags_Not_Sold__c</fullName>
        <label>Bags Not Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commercial_Purchase_Group_ID__c</fullName>
        <label>Commercial Purchase Group ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Purchase_Group__c</fullName>
        <label>Commercial Purchase Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ewarehouse_Sale__c</fullName>
        <label>Ewarehouse Sale</label>
        <referenceTo>Sale_Record__c</referenceTo>
        <relationshipLabel>Ewarehouse Sale Green Grams Associations</relationshipLabel>
        <relationshipName>Ewarehouse_Sale_Green_Grams_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Farmer_FCI_ID__c</fullName>
        <label>Farmer FCI ID</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_3_Digits_of_Farmer_ID__c</fullName>
        <label>Last 3 Digits of Farmer ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moisture_Content__c</fullName>
        <label>Moisture Content</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_For_Not_Selling__c</fullName>
        <label>Reason For Not Selling</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Bags_Sold__c</fullName>
        <label>Total Bags Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ewarehouse Sale Green Grams Association</label>
    <nameField>
        <label>Ewarehouse Sale Green Grams Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ewarehouse Sale Green Grams Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>